--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
                     <td>Super Senior</td>
                     <td>I have a green body, no visible nose, and live in a trash.</td>
                 </tr>
+                <tr>
+                    <td>Jacob Boyle</td>
+                    <td>CS and ECE</td>
+                    <td>Sophomore</td>
+                    <td>I like to ski.</td>
+                </tr>
                 <!-- Add a row to the table and fill it in with your information -->
                 <!-- Push it back to the git repository, resolving any merge conflicts -->
             </tbody>
