--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
                     <td>I have a green body, no visible nose, and live in a trash.</td>
                 </tr>
                 <!-- Add a row to the table and fill it in with your information -->
+                <tr>
+                    <td>Claire Desrosiers</td>
+                    <td>Computer Science</td>
+                    <td>Junior</td>
+                    <td>My favorite color is olive green.</td>
+                </tr>
                 <!-- Push it back to the git repository, resolving any merge conflicts -->
             </tbody>
         </table>
