--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
                     <td>Super Senior</td>
                     <td>I have a green body, no visible nose, and live in a trash.</td>
                 </tr>
+                <tr>
+                    <td>Julian Espinal</td>
+                    <td>Computer Science</td>
+                    <td>Sophomore</td>
+                    <td>I like music</td>
+                </tr>
                 <!-- Add a row to the table and fill it in with your information -->
                 <tr>
                     <td>Claire Desrosiers</td>
