--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <h1>Team [replace with team number]</h1>
+        <h1>Team 17</h1>
         <table>
             <thead>
                 <tr>
@@ -23,6 +23,12 @@
                     <td>Computer Science</td>
                     <td>Super Senior</td>
                     <td>I have a green body, no visible nose, and live in a trash.</td>
+                </tr>
+                <tr>
+                    <td>Aditri Thakur</td>
+                    <td>RBE and CS</td>
+                    <td>Junior</td>
+                    <td>I went on IQP to NZ</td>
                 </tr>
                 <!-- Add a row to the table and fill it in with your information -->
                 <!-- Push it back to the git repository, resolving any merge conflicts -->
